[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toren"
version = "26.3.14"
description = "toren"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]
keywords = ["database"]
authors = [
    {name = "Captain Slobber", email = "captainslobber@gmail.com"},
]
dependencies = [
    "setuptools"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools"
]

[project.urls]
Homepage = "https://github.com/CaptainSlobber/toren"
Repository = "https://github.com/CaptainSlobber/toren"
Issues = "https://github.com/CaptainSlobber/toren/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["toren*"]
exclude = ["toren.tests*"]